--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,12 @@ Section: misc
 Priority: optional
 Maintainer: GenaBitu <genabitu@gmail.com>
 Build-Depends: debhelper (>=9)
-Standards-Version: 3.9.8
+Standards-Version: 3.9.7
 Homepage: https://github.com/GenaBitu/login-webcam
 
 Package: login-webcam
 Architecture: all
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, ffmpeg
 Description: Take picture on failed login
  This Debian (Ubuntu) utility automatically takes pictures using your webcam
  on failed login. Pictures are taken on failed login attempts (wrong password)
