--- a/debian/control
+++ b/debian/control
@@ -5,10 +5,12 @@ Maintainer: GenaBitu <genabitu@gmail.com>
 Build-Depends: debhelper (>=9)
 Standards-Version: 3.9.8
 Homepage: https://github.com/GenaBitu/login-webcam
+Vcs-Browser: https://github.com/GenaBitu/login-webcam
+Vcs-Git: https://github.com/GenaBitu/login-webcam.git
 
 Package: login-webcam
 Architecture: all
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, ffmpeg
 Description: Take picture on failed login
  This Debian (Ubuntu) utility automatically takes pictures using your webcam
  on failed login. Pictures are taken on failed login attempts (wrong password)
