--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -5,4 +5,7 @@ engines:
     enabled: true
 ratings:
   paths:
-  - **
+  - login_webcam
+  - login_webcam.conf
+  - debian/postinst
+  - debian/postrm
