--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -5,7 +5,7 @@ engines:
     enabled: true
 ratings:
   paths:
-  - login-webcam
-  - login-webcam.conf
-  - debian/postinst
-  - debian/postrm
+  - "login-webcam"
+  - "login-webcam.conf"
+  - "debian/postinst"
+  - "debian/postrm"
